Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -22,39 +22,75 @@
 Согласно стандарту, основная структура каталогов следующая:
 
 `/`
+>Это корневой каталог, самый верхний каталог в иерархии. Все остальные каталоги находятся внутри него. Файловую систему часто сравнивают с «деревом», так что это будет «ствол», к которому подключены все ветви.
 
 `/bin`
+>Основные бинарные файлы, доступные всем пользователям.
 
 `/boot`
+>Файлы, необходимые для процесса загрузки, включая начальный RAM-диск (initrd) и само ядро Linux.
 
 `/dev`
+>Файлы устройств. Это могут быть либо физические устройства, подключенные к системе (например, `/dev/sda` будет первым диском SCSI или SATA), либо виртуальные устройства, предоставляемые ядром.
 
 `/etc`
+>Файлы конфигураций системных утилит. При необходимости программы могут создавать подкаталоги в `/etc` для хранения нескольких файлов конфигурации.
 
 `home`
+>У каждого пользователя в системе есть «домашний» каталог для хранения личных файлов и настроек, и большинство из них находится в `/home`. Обычно домашний каталог совпадает с именем пользователя, поэтому у пользователя John будет его каталог в `/home/john`. Исключение составляют суперпользователь(root), у которого есть отдельный каталог (`/root`), и некоторые системные пользователи.
 
 `/lib`
+>Общие библиотеки, необходимые для загрузки операционной системы и запуска двоичных файлов в `/bin` и `/sbin`.
 
 `/media`
+>Сюда монтируются сменные носители, монтируемые пользователем, такие как флэш-накопители, устройства чтения компакт-дисков и DVD-ROM, гибкие диски, карты памяти и внешние диски.
 
 `/mnt`
+>Точка монтирования для временно смонтированных файловых систем.
 
 `/opt`
+>Пакеты прикладного программного обеспечения.
 
 `/root`
+>Домашний каталог суперпользователя (root).
 
 `/run`
+>Данные переменных времени выполнения.
 
 `/sbin`
+>Системные двоичные файлы.
 
 `/srv`
+>Данные, обслуживаемые системой. Например, страницы, обслуживаемые веб-сервером, могут храниться в `/srv/www`.
 
 `/tmp`
+>Временные файлы.
 
 `/usr`
+>Доступные только для чтения пользовательские данные, включая данные, необходимые некоторым вторичным утилитам и приложениям.
 
 `/proc`
+>Виртуальная файловая система, содержащая данные, относящиеся к запущенным процессам.
 
 `/var`
+>Изменяемые данные, записываемые во время работы системы, включая очередь печати, данные журнала, почтовые ящики, временные файлы, кеш браузера и т. д.
 
 Имейте в виду, что некоторые из этих каталогов, например `/etc`, `/usr` и `/var`, содержат целую иерархию подкаталогов внутри них.
+
+
+# Поиск файлов
+
+Для поиска файлов в системе Linux вы можете использовать команду `find`. Это очень мощный инструмент с множеством параметров, которые могут соответствовать его поведению и изменять вывод в точности в соответствии с вашими потребностями.
+
+Для начала `find` нужны два аргумента: отправная точка и то, что искать. Например, для поиска всех файлов в текущем каталоге (и подкаталогах), имена которых оканчиваются на `.jpg`, вы можете использовать:
+```
+$ find . -name '*.jpg'
+./pixel_3a_seethrough_1.jpg
+./Mate3.jpg
+./Expert.jpg
+./Pentaro.jpg
+./Mate1.jpg
+./Mate2.jpg
+./Sala.jpg
+./Hotbit.jpg
+```
