Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -94,3 +94,18 @@ $ find . -name '*.jpg'
 ./Sala.jpg
 ./Hotbit.jpg
 ```
+Это будет соответствовать любому файлу, последние четыре символа имени которого являются .jpg, независимо от того, что стоит перед ним, поскольку * - это подстановочный знак для «чего угодно». Однако посмотрите, что произойдет, если в конце шаблона добавить еще один *:
+```
+$ find . -name '*.jpg*'
+./pixel_3a_seethrough_1.jpg
+./Pentaro.jpg.zip
+./Mate3.jpg
+./Expert.jpg
+./Pentaro.jpg
+./Mate1.jpg
+./Mate2.jpg
+./Sala.jpg
+./Hotbit.jpg
+```
+Файл Pentaro.jpg.zip (выделенный выше) не был включен в предыдущий список, потому что, даже если он содержит .jpg в своем имени, он не соответствует шаблону, так как после него есть дополнительные символы.
+>Имейте в виду, что параметр -name чувствителен к регистру. Если вы хотите выполнить поиск без учета регистра, используйте -iname.
