Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -107,5 +107,64 @@ $ find . -name '*.jpg*'
 ./Sala.jpg
 ./Hotbit.jpg
 ```
-Файл Pentaro.jpg.zip (выделенный выше) не был включен в предыдущий список, потому что, даже если он содержит .jpg в своем имени, он не соответствует шаблону, так как после него есть дополнительные символы.
->Имейте в виду, что параметр -name чувствителен к регистру. Если вы хотите выполнить поиск без учета регистра, используйте -iname.
+Файл `Pentaro.jpg.zip`(выделенный выше) не был включен в предыдущий список, потому что, даже если он содержит `.jpg` в своем имени, он не соответствует шаблону, так как после него есть дополнительные символы.
+>Имейте в виду, что параметр -name чувствителен к регистру. Если вы хотите выполнить поиск без учета регистра, используйте `-iname`.
+
+Выражение `*.jpg` должно быть заключено в одинарные кавычки, чтобы оболочка не интерпретировала сам шаблон. Попробуйте без кавычек и посмотрите, что получится.
+
+По умолчанию поиск начинается с начальной точки и спускается по всем найденным подкаталогам (и подкаталогам этих подкаталогов). Вы можете ограничить это поведение с помощью параметров `-maxdepth N`, где `N` - максимальное количество уровней.
+
+Для поиска только в текущем каталоге вы должны использовать -maxdepth 1. Предположим, у вас есть следующая структура каталогов:
+```
+directory
+├── clients.txt
+├── partners.txt -> clients.txt
+└── somedir
+    ├── anotherdir
+    └── clients.txt
+```
+Для поиска внутри `somedir` вам нужно будет использовать `-maxdepth 2` (текущий каталог на +1 уровень ниже). Для поиска внутри `anotherdir` потребуется `-maxdepth 3` (текущий каталог +2 уровня ниже). Параметр `-mindepth N` работает в обратном порядке, ища только в каталогах минимум на `N` уровней ниже.
+
+Параметр `-mount` можно использовать, чтобы избежать падения внутри смонтированных файловых систем. Вы также можете ограничить поиск определенными типами файловых систем с помощью параметра `-fstype`. Итак, `find /mnt -fstype exfat -iname "*report*"` будет искать только внутри файловых систем exFAT, смонтированных в `/mnt`.
+
+
+# Поиск по атрибутам
+
+Вы можете использовать приведенные ниже параметры для поиска файлов с определенными атрибутами, такими как те, которые доступны для записи вашему пользователю, имеют определенный набор прав доступа или имеют определенный размер:
+
+`-user USERNAME`
+>Соответствует файлам, принадлежащим пользователю `USERNAME`.
+
+`-group GROUPNAME`
+>Соответствует файлам, принадлежащим группе `GROUPNAME`.
+
+`-readable`
+>Соответствует файлам, доступным для чтения текущему пользователю.
+
+`-writable`
+>Соответствует файлам, которые доступны для записи текущему пользователю.
+
+`-executable`
+>Соответствует файлам, которые исполняются текущим пользователем. В случае каталогов это будет соответствовать любому каталогу, в который может войти пользователь (разрешение `x`).
+
+`-perm NNNN`
+>Это будет соответствовать любым файлам, которые имеют точно разрешение `NNNN`. Например, `-perm 0664` будет соответствовать любым файлам, которые пользователь и группа могут читать и записывать, и которые могут читать другие (или `rw-rw-r--`).
+
+Вы можете добавить `-` перед `NNNN`, чтобы проверять файлы, у которых есть права не менее чем указанные. Например, `-perm -644` будет соответствовать файлам с правами не менее `644` (`rw-r--r--`). Это включает файл с `664` (`rw-rw-r--`) или даже `775` (`rwxrwx-r-x`).
+
+`-empty`
+>Соответствует пустым файлам и каталогам.
+
+`-size N`
+>Соответствует любым файлам размером `N`, где `N` по умолчанию - количество блоков размером 512 байт. Вы можете добавлять суффиксы к `N` для других единиц: `Nc` будет считать размер в байтах, `Nk` в кибибайтах (KiB, кратные 1024 байтам), `NM` в мебибайтах (MiB, кратные 1024 * 1024) и `NG` для гибибайтов (GiB, кратные 1024 * 1024 * 1024).
+
+Опять же, вы можете добавить префиксы `+` или `-` (здесь означают больше и меньше чем) для поиска относительных размеров. Например, `-size -10M` будет соответствовать любому файлу размером менее 10 МБ. 
+
+Например, для поиска файлов в вашем домашнем каталоге, без учета регистра в любой части имени, имеют права 0644, были доступны 10 дней назад и размер которых составляет не менее 1 MB, вы можете использовать
+```
+$ find ~ -iname "*report*" -perm 0644 -atime 10 -size +1M
+```
+
+
+# Поиск по времени
+
