Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -168,3 +168,21 @@ $ find ~ -iname "*report*" -perm 0644 -atime 10 -size +1M
 
 # Поиск по времени
 
+Помимо поиска атрибутов, вы также можете выполнять поиск по времени, находя файлы, к которым осуществлялся доступ, их атрибуты были изменены или были изменены в течение определенного периода времени. Параметры следующие:
+
+`-amin N`, `-cmin N`, `-mmin N`
+>Это будет соответствовать файлам, к которым был осуществлен доступ, были изменены атрибуты или были изменены (соответственно) `N` минут назад.
+
+`-atime N`, `-ctime N`, `-mtime N`
+>Это будет соответствовать файлам, к которым был осуществлен доступ, были изменены атрибуты или были изменены `N*24` часа назад.
+
+Для `-cmin N` и `-ctime N` любое изменение атрибута вызовет совпадение, включая изменение прав, чтение или запись в файл. Это делает эти параметры особенно мощными, поскольку практически любая операция с файлом вызовет совпадение.
+
+Следующий пример соответствует любому файлу в текущем каталоге, который был изменен менее 24 часов назад и имеет размер более 100 МБ:
+```
+$ find . -mtime -1 -size +100M
+```
+
+
+# Использование `locate` и `updatedb`
+
