Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -186,3 +186,136 @@ $ find . -mtime -1 -size +100M
 
 # Использование `locate` и `updatedb`
 
+`locate` и `updatedb` - это команды, которые можно использовать для быстрого поиска файла, соответствующего заданному шаблону, в системе Linux. Но в отличие от `find`, `locate` не будет искать шаблон в файловой системе: вместо этого он ищет его в базе данных, созданной с помощью команды `updatedb`. Это дает очень быстрые результаты, но они могут быть неточными в зависимости от того, когда база данных обновлялась в последний раз. 
+
+Самый простой способ использовать функцию `locate` - просто задать ему шаблон для поиска. Например, чтобы найти каждое изображение JPEG в вашей системе, вы должны использовать `locate jpg`. Список результатов может быть довольно длинным, но должен выглядеть так:
+```
+$ locate jpg
+/home/carol/Downloads/Expert.jpg
+/home/carol/Downloads/Hotbit.jpg
+/home/carol/Downloads/Mate1.jpg
+/home/carol/Downloads/Mate2.jpg
+/home/carol/Downloads/Mate3.jpg
+/home/carol/Downloads/Pentaro.jpg
+/home/carol/Downloads/Sala.jpg
+/home/carol/Downloads/pixel_3a_seethrough_1.jpg
+/home/carol/Downloads/jpg_specs.doc
+```
+При указании шаблона `jpg` команда `locate` покажет все, что содержит этот шаблон, независимо от того, что идет до или после него. Вы можете увидеть пример этого на файле `jpg_specs.doc` в листинге выше: шаблон содержитсяв в имени, а не в расширении файла `*.jpg`.
+>Помните, что с помощью `locate` вы сопоставляете шаблоны, а не расширения файлов.
+
+По умолчанию в шаблоне учитывается регистр. Это означает, что файлы, содержащие `.JPG`, не будут отображаться, поскольку шаблон написан в нижнем регистре. Чтобы этого избежать, передайте параметр `-i` для поиска. Повторяя наш предыдущий пример:
+```
+$ locate -i .jpg
+/home/carol/Downloads/Expert.jpg
+/home/carol/Downloads/Hotbit.jpg
+/home/carol/Downloads/Mate1.jpg
+/home/carol/Downloads/Mate1_old.JPG
+/home/carol/Downloads/Mate2.jpg
+/home/carol/Downloads/Mate3.jpg
+/home/carol/Downloads/Pentaro.jpg
+/home/carol/Downloads/Sala.jpg
+/home/carol/Downloads/pixel_3a_seethrough_1.jpg
+```
+Обратите внимание, что файл `Mate1_old.JPG`, выделенный жирным шрифтом выше, не присутствовал в предыдущем листинге.
+
+Вы можете передать несколько шаблонов для поиска, просто разделив их пробелами. В приведенном ниже примере выполняется поиск без учета регистра любых файлов, соответствующих шаблонам `zip` и `jpg`:
+```
+$ locate -i zip jpg
+/home/carol/Downloads/Expert.jpg
+/home/carol/Downloads/Hotbit.jpg
+/home/carol/Downloads/Mate1.jpg
+/home/carol/Downloads/Mate1_old.JPG
+/home/carol/Downloads/Mate2.jpg
+/home/carol/Downloads/Mate3.jpg
+/home/carol/Downloads/OPENMSXPIHAT.zip
+/home/carol/Downloads/Pentaro.jpg
+/home/carol/Downloads/Sala.jpg
+/home/carol/Downloads/gbs-control-master.zip
+/home/carol/Downloads/lineage-16.0-20190711-MOD-quark.zip
+/home/carol/Downloads/pixel_3a_seethrough_1.jpg
+/home/carol/Downloads/jpg_specs.doc
+```
+При использовании нескольких шаблонов вы можете настроить поиск так, чтобы отображались только те файлы, которые соответствуют каждому из них. Это делается с помощью опции `-A`. В следующем примере будет показаны все файлы, соответствующие шаблонам `.jpg` и `.zip`:
+```
+$ locate -A .jpg .zip
+/home/carol/Downloads/Pentaro.jpg.zip
+```
+Если вы хотите подсчитать количество файлов, соответствующих заданному шаблону, вместо того, чтобы показывать их полный путь, вы можете использовать параметр `-c`. Например, чтобы подсчитать количество файлов `.jpg` в системе:
+```
+$ locate -c .jpg
+1174
+```
+Одна из проблем с `locate` заключается в том, что он показывает только записи, присутствующие в базе данных, созданной `updatedb` (находится в `/var/lib/mlocate.db`). Если база данных устарела, в выходных данных могут отображаться файлы, которые были удалены с момента последнего обновления. Один из способов избежать этого - добавить параметр `-e`, который заставит его проверять, существует ли еще файл, прежде чем его отображать. Конечно, это не решит проблему отсутствия файлов, созданных после последнего обновления базы данных. Для этого вам нужно будет обновить базу данных с помощью команды `updatedb`. Сколько времени это займет, будет зависеть от количества файлов на вашем диске.
+
+
+# Управление поведением updatedb
+
+Поведение `updatedb` можно контролировать с помощью файла `/etc/updatedb.conf`. Это текстовый файл, в котором каждая строка управляет одной переменной. Пустые строки игнорируются, а строки, начинающиеся с символа #, рассматриваются как комментарии.
+
+`PRUNEFS=` 
+>Любые типы файловых систем, указанные после этого параметра, не будут сканироваться `updatedb`. Этот список должен быть разделен пробелами, а сами типы нечувствительны к регистру, поэтому `NFS` и `nfs` одинаковы. 
+
+`PRUNENAMES=` 
+>Это список имен каталогов, разделенных пробелами, которые не следует сканировать с помощью `updateb`. 
+
+`PRUNEPATHS=` 
+>Это список имен путей, которые следует игнорировать `updateb`. Имена путей должны быть разделены пробелами и указаны так же, как они будут отображаться `updatedb` (например, `/var/spool /media`). 
+
+`PRUNE_BIND_MOUNTS=` 
+>Это простая переменная типа `yes` или `no`. Если установлено значение `yes`, привязки монтирования (каталоги, смонтированные в другом месте с помощью команды `mount --bind`) будут игнорироваться.
+
+
+#  Поиск двоичных файлов, страниц руководства и исходного кода
+
+Это очень полезная команда, которая показывает полный путь к исполняемому файлу. Например, если вы хотите найти исполняемый файл для bash, вы можете использовать:
+```
+$ which bash
+/usr/bin/bash
+```
+Если добавлен параметр -a, команда покажет все пути, соответствующие исполняемому файлу. Обратите внимание на разницу:
+```
+$ which mkfs.ext3
+/usr/sbin/mkfs.ext3
+
+$ which -a mkfs.ext3
+/usr/sbin/mkfs.ext3
+/sbin/mkfs.ext3
+```
+>Чтобы узнать, какие каталоги находятся в `PATH`, используйте команду `echo $ PATH`. Это выведет (`echo`) содержимое переменной `PATH` (`$PATH`) на вашем терминале.
+
+`type` - аналогичная команда, которая покажет информацию о двоичном файле, в том числе о его местонахождении и его типе. Просто используйте `type`, за которым следует имя команды:
+```
+$ type locate
+locate is /usr/bin/locate
+```
+Параметр `-a` работает так же, как и в `which`, показывая все пути, соответствующие исполняемому файлу. Вот так:
+```
+$ type -a locate
+locate is /usr/bin/locate
+locate is /bin/locate
+```
+А параметр `-t` покажет тип файла команды, который может быть `alias`, `keyword`, `function`, `builtin` или `file`. Например:
+```
+$ type -t locate
+file
+
+$ type -t ll
+alias
+
+$ type -t type
+type is a built-in shell command
+```
+Команда `whereis` более универсальна и, помимо двоичных файлов, также может использоваться для отображения расположения страниц руководства или даже исходного кода программы (если он доступен в вашей системе). Просто введите `whereis`, за которым следует двоичное имя:
+```
+$ whereis locate
+locate: /usr/bin/locate /usr/share/man/man1/locate.1.gz
+```
+Приведенные выше результаты включают двоичные файлы (`/usr/bin/locate`) и сжатые справочные страницы (`/usr/share/man/man1/locate.1.gz`). Вы можете быстро отфильтровать результаты, используя ключи, такие как `-b`, который ограничит их только двоичными файлами, `-m`, который ограничит их только страницами руководства, или `-s`, который ограничит их только исходным кодом. Повторяя приведенный выше пример, вы получите:
+```
+$ whereis -b locate
+locate: /usr/bin/locate
+
+$ whereis -m locate
+locate: /usr/share/man/man1/locate.1.gz
+```
