Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -319,3 +319,111 @@ locate: /usr/bin/locate
 $ whereis -m locate
 locate: /usr/share/man/man1/locate.1.gz
 ```
+
+
+# Упражнения для закрепления
+
+1. Используя команду `find`, найдите файлы, которые доступны для записи пользователю, которые были изменены за последние 10 дней и имеют размер более 4ГБ, только в текущем каталоге. 
+2. Используя команду `locate`, найдите все файлы, содержащие `report`, а также `updated`, `update`  или `updating` в их именах. 
+3. Как узнать, где хранится справочная страница для `ifconfig`? 
+4. Какую переменную нужно добавить в `/etc/updatedb.conf`, чтобы `updatedb` игнорировал файловые системы `ntfs`? 
+5. Системный администратор хочет смонтировать внутренний диск (`/dev/sdc1`). Согласно FHS, в какой каталог должен быть смонтирован этот диск?
+
+
+# Упражнения на размышления
+
+1. Когда используется `locate`, результаты извлекаются из базы данных, созданной `updatedb`. Однако эта база данных может быть устаревшей, что приведет к отображению файлов, которые больше не существуют. Как вы можете заставить `locate` показывать на выходе только существующие файлы? 
+2. Найдите любой файл в текущем каталоге или подкаталогах на 2 уровня ниже, за исключением смонтированных файловых систем, которые содержат шаблон `Status` или `statute` в своих именах. 
+3. Ограничив поиск файловыми системами `ext4`, найдите любые файлы в `/mnt`, которые имеют как минимум права на выполнение для группы, доступны для чтения для текущего пользователя и имеют какой-либо атрибут, измененный за последние 2 часа.
+4. Найдите пустые файлы, которые были созданы более 30 дней назад и находятся как минимум на два уровня ниже текущего каталога. 
+5. Учтите, что пользователи `carol` и `john` входят в группу `mkt`. Найдите в домашнем каталоге Джона любые файлы, которые также доступны для чтения Кэрол.
+
+
+# Резюме
+
+В этом уроке вы узнали об основной организации файловой системы на Linux-машине в соответствии с FHS и о том, как находить двоичные файлы и файлы по имени или по атрибутам. В этом уроке обсуждались следующие команды: 
+
+`find` 
+>Универсальная команда, используемая для поиска файлов и папок на основе множества критериев поиска. 
+
+`locate` 
+>Утилита, использующая локальную базу данных, которая содержит местоположения для локально сохраненных файлов. 
+
+`updatedb` 
+>Обновляет локальную базу данных, используемую командой `locate`. 
+
+`which` 
+>Отображает полный путь к исполняемому файлу. 
+
+`whereis` 
+>Отображает расположение страниц руководства, двоичных файлов и исходного кода в системе. 
+
+`type`
+>Отображает расположение двоичного файла и тип его приложения (например, установленную программу, встроенную программу Bash и т. д.).
+
+
+# Ответы на упражнения для закрепления
+
+1. Используя команду `find`, найдите файлы, которые доступны для записи пользователю, которые были изменены за последние 10 дней и имеют размер более 4ГБ, только в текущем каталоге. 
+
+Для этого вам потребуются параметры `-writable`, `-mtime` и `-size`:
+```
+find . -writable -mtime -10 -size 4G
+```
+
+2. Используя команду `locate`, найдите все файлы, содержащие `report`, а также `updated`, `update`  или `updating` в их именах. 
+
+Поскольку функция `locate` должна соответствовать всем шаблонам, используйте параметр `-A`:
+```
+locate -A "report" "updat"
+```
+
+3. Как узнать, где хранится справочная страница для `ifconfig`? 
+
+Используйте параметр `-m` для `whereis`:
+```
+whereis -m ifconfig
+```
+
+4. Какую переменную нужно добавить в `/etc/updatedb.conf`, чтобы `updatedb` игнорировал файловые системы `ntfs`? 
+
+Переменная `PRUNEFS=`, за которой следует тип файловой системы: `PRUNEFS=ntfs`
+
+5. Системный администратор хочет смонтировать внутренний диск (`/dev/sdc1`). Согласно FHS, в какой каталог должен быть смонтирован этот диск?
+
+На практике диск можно установить где угодно. Однако FHS рекомендует выполнять временные монтирования в `/mnt`.
+
+
+# Ответы на упражнения для размышления
+
+1. Когда используется `locate`, результаты извлекаются из базы данных, созданной `updatedb`. Однако эта база данных может быть устаревшей, что приведет к отображению файлов, которые больше не существуют. Как вы можете заставить `locate` показывать на выходе только существующие файлы? 
+
+Добавьте параметр `-e` для поиска, как в `locate -e PATTERN`.
+
+2. Найдите любой файл в текущем каталоге или подкаталогах на 2 уровня ниже, за исключением смонтированных файловых систем, которые содержат шаблон `Status` или `statute` в своих именах. 
+
+Помните, что для `-maxdepth` вы также должны учитывать текущий каталог, поэтому нам нужно три уровня (текущий плюс 2 уровня вниз):
+```
+find . -maxdepth 3  -mount -iname "*statu*"
+```
+
+3. Ограничив поиск файловыми системами `ext4`, найдите любые файлы в `/mnt`, которые имеют как минимум права на выполнение для группы, доступны для чтения для текущего пользователя и имеют какой-либо атрибут, измененный за последние 2 часа.
+
+Используйте параметр `-fstype` команды `mount`, чтобы ограничить поиск определенными типами файловых систем. Файл, доступный для чтения текущим пользователем, будет иметь не менее 4 в первой цифре разрешений, а один исполняемый файл для группы будет иметь не менее 1 во второй цифре. Поскольку нас не интересуют разрешения для других пользователей, мы можем использовать 0 в качестве третьей цифры. Используйте `-cmin N` для фильтрации последних изменений атрибутов, помня, что `N` указывается в минутах. Так:
+```
+find /mnt -fstype ext4 -perm -410 -ctime 120
+```
+
+4. Найдите пустые файлы, которые были созданы более 30 дней назад и находятся как минимум на два уровня ниже текущего каталога. 
+
+Параметр `-mindepth N` можно использовать для ограничения поиска как минимум `N` уровнями внутрь директории, но помните, что вы должны включить и текущий каталог в счетчик. Используйте `-empty`, чтобы проверить наличие пустых файлов, и `-mtime N`, чтобы указать время модификации. Так:
+```
+find . -empty -mtime +30 -mindepth 3
+```
+
+5. Учтите, что пользователи `carol` и `john` входят в группу `mkt`. Найдите в домашнем каталоге `john` любые файлы, которые также доступны для чтения `carol`.
+
+Учитывая, что они являются членами одной группы, нам нужен как минимум `r`(`4`) в правах доступа для группы пользователей, и мы не учитываем права достпа для остальных пользователей. Так:
+```
+find /home/john -perm -040
+```
