Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -4,7 +4,7 @@
 |:--------------|:--------------------------------------------|
 | Версия:       | 5                                           |
 | Тема:         | 104 Устройства, файловые системы Linux, стандарт иерархии файловых систем |                           
-| Цель:         | 104.7 Поиск системных файлов и правильное их местоположение |
+| Цель:         | 104.7 Поиск и правильное местоположение системных файлов |
 | Урок:         | 1 из 1                                      |
 
 
