Update 103.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
@@ -9,3 +9,17 @@
 
 
 # Введение
+
+Все компьютерные программы следуют одному и тому же общему принципу: данные, полученные из какого-либо источника, преобразуются для получения понятного результата. В контексте оболочки Linux источником данных может быть локальный файл, удаленный файл, устройство (например, клавиатура) и т. д. Вывод программы обычно отображается на экране, но также обычно используется для хранения выходных данных в локальной файловой системе, выводе его на удаленном устройстве, воспроизведении через аудиоколонки и т. д. 
+
+Операционные системы, вдохновленные Unix, такие как Linux, предлагают большое разнообразие методов ввода/вывода. В частности, метод *файловых дескрипторов* позволяет динамически связывать целые числа с каналами данных, чтобы процесс мог ссылаться на них как на свои потоки данных ввода/вывода. 
+
+Стандартные процессы Linux имеют три открытых канала связи по умолчанию: *стандартный входной* канал (чаще всего называемый просто `stdin`), *стандартный выходной* канал (`stdout`) и *стандартный канал ошибок* (`stderr`). Цифровые файловые дескрипторы, назначенные этим каналам: `0` для `stdin`, `1` для `stdout` и `2` для `stderr`. Каналы связи также доступны через специальные устройства `/dev/stdin`, `/dev/stdout` и `/dev/stderr`. 
+
+Эти три стандартных канала связи позволяют программистам писать код, который считывает и записывает данные, не беспокоясь о том, с какого носителя они поступают или на которые направляются. Например, если программе требуется набор данных в качестве ввода, она может просто запросить данные из стандартного ввода, и все, что используется в качестве стандартного ввода, предоставит эти данные. Точно так же самый простой метод, который программа может использовать для отображения своего вывода, - это записать его в стандартный вывод. В стандартном сеансе оболочки клавиатура определяется как `stdin`, а экран монитора определяется как `stdout` и `stderr`. 
+
+Оболочка Bash имеет возможность переназначать каналы связи при загрузке программы. Это позволяет, например, переопределить экран как стандартный вывод и использовать файл в локальной файловой системе как стандартный вывод.
+
+
+# Перенаправления
+
