Update 103.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
@@ -58,3 +58,60 @@ $ cat /tmp/error.txt
 cat: /proc/cpu_info: No such file or directory
 cat: /proc/cpu_info: No such file or directory
 ```
+В предыдущем примере новое сообщение об ошибке было добавлено к существующему в файле `/tmp/error.txt`. Если файл еще не существует, он будет создан с новыми данными. 
+
+Источник данных стандартного ввода процесса также может быть переназначен. Символ `<` используется для перенаправления содержимого файла на стандартный ввод процесса. В этом случае данные передаются справа налево: предполагается, что переназначенный дескриптор равен 0 слева от символа «меньше», а источник данных (путь к файлу) должен находиться справа от символа «меньше». Команда `uniq`, как и большинство утилит командной строки для обработки текста, по умолчанию принимает данные, отправленные на стандартный ввод:
+```
+$ uniq -c </tmp/error.txt
+      2 cat: /proc/cpu_info: No such file or directory
+```
+Параметр `-c` заставляет `uniq` отображать, сколько раз повторяющаяся строка появляется в тексте. Поскольку числовое значение перенаправленного дескриптора файла было подавлено, пример команды эквивалентен `uniq -c 0< /tmp/error.txt`. Использование файлового дескриптора, отличного от `0`, в перенаправлении ввода имеет смысл только в определенных контекстах, потому что программа может запрашивать данные в файловых дескрипторах `3`, `4` и т. д. Действительно, программы могут использовать любое целое число больше `2` как новое файловые дескрипторы ввода/вывода данных. Например, следующий код C считывает данные из файлового дескриптора `3` и просто реплицирует их в файловый дескриптор `4`:
+>Программа должна правильно обрабатывать такие файловые дескрипторы, иначе она может попытаться выполнить недопустимую операцию чтения или записи и выйдет из строя.
+```
+#include <stdio.h>
+
+int main(int argc, char **argv){
+  FILE *fd_3, *fd_4;
+  // Open file descriptor 3
+  fd_3 = fdopen(3, "r");
+  // Open file descriptor 4
+  fd_4 = fdopen(4, "w");
+  // Read from file descriptor 3
+  char buf[32];
+  while ( fgets(buf, 32, fd_3) != NULL ){
+    // Write to file descriptor 4
+    fprintf(fd_4, "%s", buf);
+  }
+  // Close both file descriptors
+  fclose(fd_3);
+  fclose(fd_4);
+}
+```
+Чтобы проверить это, сохраните образец кода как `fd.c` и скомпилируйте его с помощью `gcc -o fd fd.c`. Этой программе нужны файловые дескрипторы `3` и `4`, чтобы она могла читать и писать в них. Например, ранее созданный файл `/tmp/error.txt` может использоваться в качестве источника для файлового дескриптора `3`, а файловый дескриптор `4` может быть перенаправлен на стандартный вывод:
+```
+$ ./fd 3</tmp/error.txt 4>&1
+cat: /proc/cpu_info: No such file or directory
+cat: /proc/cpu_info: No such file or directory
+```
+С точки зрения программиста, использование файловых дескрипторов позволяет избежать анализа параметров и путей файловой системы. Один и тот же файловый дескриптор может использоваться даже для ввода и вывода. В этом случае дескриптор файла определяется в командной строке символом "меньше" и "больше", как `3<> /tmp/error.txt`.
+
+
+# Here Document и Here String
+
+Другой способ перенаправления ввода - это методы *Here Document* и *Here String*. Перенаправление Here Document позволяет вводить многострочный текст, который будет использоваться в качестве перенаправленного содержимого. Два символа меньше `<<` указывают на перенаправление Here Document:
+```
+$ wc -c <<EOF
+> How many characters
+> in this Here document?
+> EOF
+43
+```
+Справа от двух символов `<<` находится знак конца файла `EOF`. Режим вставки завершится, как только будет введена строка, содержащая только знак конца файла. В качестве знака конца файла можно использовать любой другой знак, но важно не ставить пробелы между символом «меньше» и EOF. В приведенном выше примере две строки текста были отправлены на стандартный ввод команды `wc -c`, которая отображает количество символов. Как и в случае перенаправления ввода для файлов, предполагается, что стандартный ввод (дескриптор файла `0`), если дескриптор перенаправленного файла подавлен. 
+
+Here String метод очень похож на Here document метод , но только для одной строки:
+```
+$ wc -c <<<"How many characters in this Here string?"
+41
+```
+В этом примере строка справа от трех знаков меньше отправляется на стандартный ввод команды `wc -c`, которая подсчитывает количество символов. Строки, содержащие пробелы, должны быть внутри кавычек, иначе только первое слово будет использоваться в качестве Here string, а остальные будут переданы в качестве аргументов команде.
+
